--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title My Shop
+        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/product.css")
     body
@@ -16,4 +16,19 @@ html(lang="en")
                     li.main-header__item
                         a(href="/admin/add-product") Add Product
 
-        
+        main  
+            if prods.length > 0
+                .grid
+                    each product in prods
+                        article.card.product-item
+                            header.card__header
+                            h1.product__title #{product.title}
+                        div.card__image
+                            img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png", alt="A Book")
+                        div.card__context
+                            h2.product__price $19.99
+                            p.product_descripton 一个非常有趣的书.
+                        .card__actions
+                            button.btn Add to Card
+            else 
+                h1 No Products
