--- a/views/add-product.hbs
+++ b/views/add-product.hbs
@@ -5,6 +5,6 @@
             <input type="text" name="title" id="title">
         </div>
 
-        <button type="submit">Add Product</button>
+        <button class="btn" type="submit">Add Product</button>
     </form>
 </main>
